--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -6,137 +6,146 @@
 {% block content %}
 
 {% block centercol %}
-  <div class="grid_11">
+    <div class="grid_11">
 
-    <div>
-      <p><img src="{{ STATIC_URL }}/assets/indextitle.png" /></p><br /><br />
-      <p class="intro">{% trans "e-cidadania is a participative democracy tool for citizens. It has an advanced debate system, proposals, document versioning, and you can create specific spaces for every process, it has a lot of functions more but it's better that you try it by yourself." %}
-      </p>
-      <br /><span style="margin-left: 35%;"><img src="{{ STATIC_URL }}/assets/sep.png"/></span><br />
-    </div>
-
-    {% if perms.news.add_post %}
-    <div id="tools">
-      <a href="{{ request.path}}news/add/">
-        <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add news' %}" title="{% trans 'Add news' %}"/>
-      </a>
-    </div>
-    {% endif %}
-
-    {% for news in publication %}
-      {% if news.pub_index %}
-        <div class="post">
-          {% if perms.news.edit_post %}
-            <div id="tools">
-              <a href="{{ request.path }}news/{{ news.id }}/edit/">
-                <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
-              </a> 
-              {% if perms.news.delete_post %}
-                <a href="{{ request.path }}news/{{ news.id }}/delete/">
-                  <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
-                </a>
-              {% endif %}
-            </div>
-          {% endif %}
-          <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
-          <h4>{% trans "Written by" %} {{ news.author }} {% trans "on" %} {{ news.pub_date }} | {% trans "Tags" %}: {{ news.post_tags }}</h4>
-          <p>{{ news.post_message|safe }}</p>
+        <div>
+            <p><img src="{{ STATIC_URL }}/assets/indextitle.png" /></p><br /><br />
+            <p class="intro">
+                {% trans "e-cidadania is a participative democracy tool for citizens. It has an advanced debate system, proposals, document versioning, and you can create specific spaces for every process, it has a lot of functions more but it's better that you try it by yourself." %}
+            </p>
+            <br />
+            <span style="margin-left: 35%;"><img src="{{ STATIC_URL }}/assets/sep.png"/></span>
+            <br />
         </div>
-      {% endif %}
-    {% empty %}
-      <div class="post">
-        <p>{% trans "Nothing published yet." %}</p>
-      </div>
-    {% endfor%}
-  </div>
+
+        {% if perms.news.add_post %}
+            <div id="tools">
+                <a href="{{ request.path}}news/add/">
+                    <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add news' %}" title="{% trans 'Add news' %}"/>
+                </a>
+            </div>
+        {% endif %}
+
+        {% for news in publication %}
+            {% if news.pub_index %}
+                <div class="post">
+                    {% if perms.news.edit_post %}
+                        <div id="tools">
+                            <a href="{{ request.path }}news/{{ news.id }}/edit/">
+                                <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
+                            </a> 
+                            {% if perms.news.delete_post %}
+                                <a href="{{ request.path }}news/{{ news.id }}/delete/">
+                                    <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
+                                </a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                    <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
+                    <h4>{% trans "Written by" %} {{ news.author }} {% trans "on" %} {{ news.pub_date }} | {% trans "Tags" %}: {{ news.post_tags }}</h4>
+                    <p>{{ news.post_message|safe }}</p>
+                </div>
+            {% endif %}
+        {% empty %}
+            <div class="post">
+                <p>{% trans "Nothing published yet." %}</p>
+            </div>
+        {% endfor%}
+    </div>
+
 {% endblock %}
 
 {% block rightcol%}
-  <div class="grid_5">
+    <div class="grid_5">
 
-    <div id="widget">
-      <p><span style="font-size: 23px;">{% trans "What can you do with e-cidadania?" %}</span> <strong><a href="/about">{% trans "Discover it here" %}</a></strong></p>
-    </div>
+        <div id="widget">
+            <p><span style="font-size: 23px;">{% trans "What can you do with e-cidadania?" %}</span> <strong><a href="/about">{% trans "Discover it here" %}</a></strong></p>
+        </div>
 
-    <div id="widget">
-      <p><a href="/spaces/add">{% trans "Create your own space" %}</a> {% trans "inside e-cidadania" %}</p>
-    </div>
+        <div id="widget">
+            <p><a href="/spaces/add">{% trans "Create your own space" %}</a> {% trans "inside e-cidadania" %}</p>
+        </div>
 
-    <div id="widget">
-      <h2>{% trans "Spaces list" %}</h2><br />
-        <form method="get" action="/spaces/go/">{% csrf_token %}
-          <select name="spaces">
-            {% for space in spaces %}
-              <option>{{ space.name }}</option>
+        <div id="widget">
+            <h2>{% trans "Spaces list" %}</h2><br />
+            <form method="get" action="/spaces/go/">{% csrf_token %}
+                <select name="spaces">
+                    {% for space in spaces %}
+                        <option>{{ space.name }}</option>
+                    {% empty %}
+                        <option>{% trans "No spaces" %}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" class="btn" value="{% trans 'Go' %}" />
+            </form>
+        </div>
+
+        <div id="widget">
+            <h2>{% trans "Recently added spaces" %}</h2>
+            {% for recent in recent_spaces %}
+                <a href="/spaces/{{ recent.url }}">{{ recent.name }}</a><br/>
             {% empty %}
-              <option>{% trans "No spaces" %}</option>
+                {% trans "No spaces have been added recently." %}
             {% endfor %}
-          </select>
-          <input type="submit" value="{% trans 'Go' %}" />
-        </form>
-    </div>
+        </div>
 
-    <div id="widget">
-      <h2>{% trans "Recently added spaces" %}</h2>
-      {% for recent in recent_spaces %}
-        <a href="/spaces/{{ recent.url }}">{{ recent.name }}</a><br/>
-      {% empty %}
-        {% trans "No spaces have been added recently." %}
-      {% endfor %}
-    </div>
+        <div id="widget">
+            <h2>{% trans "Share" %}</h2><br />
+            <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+            <script>
+                new TWTR.Widget({
+                    version: 2,
+                    type: 'profile',
+                    rpp: 5,
+                    interval: 6000,
+                    width: 'auto',
+                    height: 300,
+                    theme: {
+                        shell: {
+                            background: '#eaeaea',
+                            color: '#666666'
+                        },
+                        tweets: {
+                            background: '#ffffff',
+                            color: '#000000',
+                            links: '#666666'
+                        }
+                    },
+                    features: {
+                        scrollbar: false,
+                        loop: false,
+                        live: false,
+                        hashtags: true,
+                        timestamp: true,
+                        avatars: false,
+                        behavior: 'all'
+                    }
+                }).render().setUser('ecidadaniafloss').start();
+            </script>
+            
+            <a href="/rss/"><img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/></a>
+            <a href="http://www.facebook.com/cidadania.coop"><img src="{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
+            <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
+            <a href="http://tuenti.com"><img src="{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
+            <a href="http://linkedin.com"><img src="{{ STATIC_URL }}/assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
+            <a href="http://identi.ca/ecidadania"><img src="{{ STATIC_URL }}/assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
+            <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
+        </div>
 
-    <div id="widget">
-      <h2>{% trans "Share" %}</h2><br />
-      <script src="http://widgets.twimg.com/j/2/widget.js"></script>
-        <script>
-new TWTR.Widget({
-  version: 2,
-  type: 'profile',
-  rpp: 5,
-  interval: 6000,
-  width: 'auto',
-  height: 300,
-  theme: {
-    shell: {
-      background: '#eaeaea',
-      color: '#666666'
-    },
-    tweets: {
-      background: '#ffffff',
-      color: '#000000',
-      links: '#666666'
-    }
-  },
-  features: {
-    scrollbar: false,
-    loop: false,
-    live: false,
-    hashtags: true,
-    timestamp: true,
-    avatars: false,
-    behavior: 'all'
-  }
-}).render().setUser('ecidadaniafloss').start();
-</script>
-      <a href="/rss/"><img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/></a>
-      <a href="http://www.facebook.com/cidadania.coop"><img src="{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
-      <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
-      <a href="http://tuenti.com"><img src="{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
-      <a href="http://linkedin.com"><img src="{{ STATIC_URL }}/assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
-      <a href="http://identi.ca/ecidadania"><img src="{{ STATIC_URL }}/assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
-      <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
+        <div id="widget">
+            <h2>{% trans "e-cidadania development" %}</h2><br />
+            <p>{% trans "Do you want to help?" %} <a href="http://dev.ecidadania.org">{% trans "Access" %}</a></p>
+        </div>
     </div>
-
-    <div id="widget">
-      <h2>{% trans "e-cidadania development" %}</h2><br />
-      <p>{% trans "Do you want to help?" %} <a href="http://dev.ecidadania.org">{% trans "Access" %}</a></p>
-    </div>
-  </div>
-{% endblock %}
+    {% endblock %}
 
 {% endblock %}
 
 {% block footer %}
-<p>{% trans "About" %} | {% trans "API" %} | {% trans "Developers" %} | {% trans "Terms of service" %} | {% trans "Help"%}</p>
+    <p>
+    {% for p in page %}
+        <a href="/{{ p.uri }}">{{ p.name }}</a> |
+    {% endfor %}
+    </p>
 {% endblock %}
 
