--- a/src/e_cidadania/apps/staticpages/templates/staticpages/staticpages_index.html
+++ b/src/e_cidadania/apps/staticpages/templates/staticpages/staticpages_index.html
@@ -5,13 +5,13 @@
     
 {% block content %}
     <div class="grid_16">
-      {{ page.content|safe }}
+        {{ page.content|safe }}
       
-      <div class="pagebutton">
-        <a href="/">&laquo; {% trans "Go back" %}</a>
-      </div>
-      <div class="pageinfo">
-        {% trans "created" %} {{ page.date }} {% trans "by" %} {{ page.author }}
-      </div>
+        <hr />
+        <a href="../../" class="btn small">&laquo; {% trans "Go back" %}</a>
+
+        <div class="pageinfo">
+            {% trans "last updated" %} {{ page.last_update }}
+        </div>
     </div>
 {% endblock %}
