--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -10,16 +10,16 @@
 
     {% block centercol %}
         <div class="grid_11">
-    
+
             {% if perms.news.add_post %}
                 <div id="tools">
                     <a href="{{ request.path }}news/add/"}>
                         <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add new post' %}" title="{% trans 'Add new post' %}"/>
-                    </a> 
+                    </a>
                     {% if perms.spaces.edit_space %}
                         <a href="{{ request.path }}edit/">
                             <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit space' %}" title="{% trans 'Edit space' %}"/>
-                        </a> 
+                        </a>
                     {% endif %}
                     {% if perms.spaces.delete_space %}
                         <a href="{{ request.path }}delete/">
@@ -28,7 +28,7 @@
                     {% endif%}
                 </div>
             {% endif %}
-      
+
             {% if get_place.mod_news %}
                 {% for news in publication %}
                     <div class="post">
@@ -36,7 +36,7 @@
                             <div id="tools">
                                 <a href="{{ request.path }}news/{{ news.id }}/edit/">
                                     <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
-                                </a> 
+                                </a>
                                 {% if perms.news.delete_post %}
                                     <a href="{{ request.path }}news/{{ news.id }}/delete/">
                                         <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
@@ -63,7 +63,7 @@
             {% comment %}
                 This is the documents block.
             {% endcomment %}
-            
+
             {% if get_place.mod_cal %}
                 <div id="widget">
                     <h2>{% trans "Calendar" %}</h2><br />
@@ -79,7 +79,7 @@
                         </script>
                     </div>
             {% endif %}
-            
+
             {% if get_place.mod_docs %}
                 <div id="widget">
                     <h2>{% trans "Documents" %}</h2><br />
@@ -90,7 +90,7 @@
                                 {% if perms.spaces.edit_document %}
                                     <a href="{{ request.path }}docs/{{ doc.id }}/edit/">
                                         <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
-                                    </a> 
+                                    </a>
                                     {% if perms.spaces.delete_document %}
                                         <a href="{{ request.path }}docs/{{ doc.id }}/delete/">
                                             <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
@@ -108,7 +108,7 @@
                     {% endif %}
                 </div>
             {% endif %}
-      
+
             {% if get_place.mod_debate %}
                 <div id="widget">
                     <h2>{% trans "Debates" %}</h2><br />
@@ -119,7 +119,7 @@
                                 {% if perms.debate.edit_debate %}
                                     <a href="{{ request.path }}docs/{{ doc.id }}/edit/">
                                         <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
-                                    </a> 
+                                    </a>
                                     {% if perms.debate.delete_debate %}
                                         <a href="{{ request.path }}docs/{{ doc.id }}/delete/">
                                             <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
@@ -156,15 +156,27 @@
                     {% endif %}
                 </div>
             {% endif %}
-      
+
             <div id="widget">
                 <h2>{% trans "Share" %}</h2><br />
                 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script><g:plusone></g:plusone><br /><br />
-                
-                <iframe src="http://www.facebook.com/plugins/like.php?href=http://ecidadania.org" scrolling="no" frameborder="0" style="border:none; width:450px; height:35px"></iframe>
-                
-                <iframe lang="es" allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/follow_button.html?screen_name=ecidadaniafloss&lang=es" style="width:300px; height:20px;"></iframe><br /><br />
-                
+
+                <div id="fb-root"></div>
+                <script>(function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) {return;}
+                        js = d.createElement(s); js.id = id;
+                        js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1";
+                        fjs.parentNode.insertBefore(js, fjs);
+                        }(document, 'script', 'facebook-jssdk'));
+                </script>
+
+                <div class="fb-like" data-href="http://ecidadania.org" data-send="false" data-width="450" data-show-faces="false" data-font="arial"></div><br /><br />
+
+                <a href="https://twitter.com/ecidadaniafloss" class="twitter-follow-button" data-lang="es">{% trans "Follow" %} @ecidadaniafloss</a>
+
+                <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script><br /><br />
+
                 <a href="rss/"><img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/>RSS Feed</a>
             </div>
         </div>
@@ -180,7 +192,7 @@
                 {% if e.website %}
                     <a href="{{ e.website }}">{{ e.name }}</a> -
                 {% else %}
-                    {{ e.name }} - 
+                    {{ e.name }} -
                 {% endif %}
         {% endif %}
     {% endfor %}
@@ -194,3 +206,4 @@
     </p>
     <p>{% trans "Space created by" %}: {{ user.get_profile.firstname }} {{ user.get_profile.surname }} {% trans "on" %} {{ get_place.date|date:"j/m/Y G:i"}}</p>
 {% endblock %}
+
