--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -33,7 +33,7 @@
                         <div id="tools">
                             <a href="{{ request.path }}news/{{ news.id }}/edit/">
                                 <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
-                            </a> 
+                            </a>
                             {% if perms.news.delete_post %}
                                 <a href="{{ request.path }}news/{{ news.id }}/delete/">
                                     <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
@@ -81,7 +81,7 @@
         </div>
 
         <div id="widget">
-            <h2>{% trans "Recently added spaces" %}</h2>
+            <h2>{% trans "Recently added spaces" %}</h2><br />
             {% for recent in recent_spaces %}
                 <a href="/spaces/{{ recent.url }}">{{ recent.name }}</a><br/>
             {% empty %}
@@ -122,13 +122,26 @@
                     }
                 }).render().setUser('ecidadaniafloss').start();
             </script>
-            
+
+            <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script><g:plusone></g:plusone><br /><br />
+
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {return;}
+                    js = d.createElement(s); js.id = id;
+                    js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1";
+                    fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));
+            </script>
+
+            <div class="fb-like" data-href="http://ecidadania.org" data-send="false" data-width="450" data-show-faces="false" data-font="arial"></div><br /><br />
+
+            <a href="https://twitter.com/ecidadaniafloss" class="twitter-follow-button" data-lang="es">{% trans "Follow" %} @ecidadaniafloss</a>
+
+            <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script><br /><br />
+
             <a href="/rss/"><img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/></a>
-            <a href="http://www.facebook.com/cidadania.coop"><img src="{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
-            <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
-            <a href="http://tuenti.com"><img src="{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
-            <a href="http://linkedin.com"><img src="{{ STATIC_URL }}/assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
-            <a href="http://identi.ca/ecidadania"><img src="{{ STATIC_URL }}/assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
             <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
         </div>
 
